Issue #172 - Use local repo for index based tests
Signed-off-by: Mickael Istria <mistria@redhat.com>